correct font color in dark mode

--- a/docs/styles.css
+++ b/docs/styles.css
@@ -25,6 +25,7 @@ body {
   background: var(--bg-color);
   font-size: 20px;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  color: var(--font-color);
 }
 
 @media (prefers-color-scheme: dark) {
@@ -179,6 +180,7 @@ a:link {
   font-size: 1em;
   background: none;
   border: 1px solid var(--font-color);
+  color: var(--font-color);
   border-radius: 2em;
   cursor: pointer;
 }
